Added homepage html and css

--- a/static/homepage.html
+++ b/static/homepage.html
@@ -3,8 +3,20 @@
 <head>
     <meta charset="UTF-8">
     <title>Title</title>
+    <link rel="stylesheet" href="/public/main-styles.css">
 </head>
 <body>
-
+<div class="overlay">
+<div>
+    <nav>
+<!--        <div id="logo-container">-->
+<!--            <img class="logo" src="">-->
+<!--        </div>-->
+        <button id="login-button" class="homepage-buttons">Log in</button>
+    </nav>
+    <h1>DateSpot</h1>
+    <button type="button" class="homepage-buttons">Create Account</button>
+</div>
+</div>
 </body>
 </html>
