--- a/static/homepage.html
+++ b/static/homepage.html
@@ -16,6 +16,9 @@
     </nav>
     <h1>DateSpot</h1>
     <button type="button" class="homepage-buttons">Create Account</button>
+    <p id = "homepage-description">Welcome to DateSpot, the website where you can match with other people who are into the same things as you and be provided with fun, 
+        relevant events for a perfect first date!
+    </p>
 </div>
 </div>
 </body>
