further updated userFound page with details

--- a/static/homepage.html
+++ b/static/homepage.html
@@ -2,7 +2,7 @@
 <html lang="en">
 <head>
     <meta charset="UTF-8">
-    <title>Title</title>
+    <title>DateSpot</title>
     <link rel="stylesheet" href="/public/main-styles.css">
 </head>
 <body>
