--- a/static/homepage.html
+++ b/static/homepage.html
@@ -3,7 +3,7 @@
 <head>
     <meta charset="UTF-8">
     <title>DateSpot</title>
-    <link rel="stylesheet" href="/public/main-styles.css">
+    <link rel="stylesheet" href="/public/css/main-styles.css">
 </head>
 <body>
 <div class="overlay">
