--- a/static/homepage.html
+++ b/static/homepage.html
@@ -14,9 +14,9 @@
 <!--        </div>-->
         <button id="login-button" class="homepage-buttons">Log in</button>
     </nav>
-    <h1>DateSpot</h1>
+    <h1 class="neon">DateSpot</h1>
     <button type="button" class="homepage-buttons" onclick="goToOnboarding()">Create Account</button>
-    <p id = "homepage-description">Welcome to DateSpot, the website where you can match with other people who are into the same things as you and be provided with fun, 
+    <p id = "homepage-description">Welcome to DateSpot, the website where you can match with other people who are into the same things as you and be provided with fun,
         relevant events for a perfect first date!
     </p>
 </div>
