--- a/static/homepage.html
+++ b/static/homepage.html
@@ -15,13 +15,13 @@
         <button id="login-button" class="homepage-buttons">Log in</button>
     </nav>
     <h1 class="neon">DateSpot</h1>
-    <button type="button" class="homepage-buttons" onclick="goToOnboarding()">Create Account</button>
+    <button type="button" class="homepage-buttons" onclick="goToOnboarding();">Create Account</button>
     <p id = "homepage-description">Welcome to DateSpot, the website where you can match with other people who are into the same things as you and be provided with fun,
         relevant events for a perfect first date!
     </p>
 </div>
 </div>
 
-<script src="/public/js/buttons.js"></script>
+<script src="/public/js/homepage.js"></script>
 </body>
 </html>
