users are now able to log in with correct credentials and be redirected to /dashboard (not implemented yet), failed log ins need further error responding

--- a/static/homepage.html
+++ b/static/homepage.html
@@ -12,7 +12,7 @@
 <!--        <div id="logo-container">-->
 <!--            <img class="logo" src="">-->
 <!--        </div>-->
-        <button id="login-button" class="homepage-buttons">Log in</button>
+        <button id="login-button" class="homepage-buttons" onclick="goToLogin();">Log in</button>
     </nav>
     <h1 id="homepageH1">DateSpot</h1>
     <button type="button" class="homepage-buttons" onclick="goToSignUp();">Create Account</button>
