--- a/static/homepage.html
+++ b/static/homepage.html
@@ -16,8 +16,7 @@
     </nav>
     <h1 id="homepageH1">DateSpot</h1>
     <button type="button" class="homepage-buttons" onclick="goToSignUp();">Create Account</button>
-    <p id = "homepage-description">Welcome to DateSpot, the website where you can match with other people who are into the same things as you and be provided with fun,
-        relevant events for a perfect first date!
+    <p id = "homepage-description">Welcome to DateSpot. We provide the ultimate first date; you do the rest
     </p>
 </div>
 </div>
