changed homepage description again

--- a/static/homepage.html
+++ b/static/homepage.html
@@ -16,7 +16,7 @@
     </nav>
     <h1 id="homepageH1">DateSpot</h1>
     <button type="button" class="homepage-buttons" onclick="goToSignUp();">Create Account</button>
-    <p id = "homepage-description">Welcome to DateSpot. We provide the ultimate first date tailored to you and your match's interests
+    <p id = "homepage-description">Welcome to DateSpot!<br><br>We provide ideas for the ultimate first date tailored to you and your match's interests
     </p>
 </div>
 </div>
